--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -89,3 +89,13 @@
     flex-direction: column;
   }
 }
+
+.main {
+  min-height: 92vh;
+  padding: 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
